Fix AutoValue annotations for Java 25